--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -136,23 +136,57 @@
             </section>
         </section>
     </main>
-<footer class="footer">
-    <div class="footer-logo">
-        <a href="./index.html" class="link logo">Web <span class="logo2">Studio</span> </a>
-    </div>
-    <div class="footer-contacts">
-        <address class="address">
-            г. Киев, пр-т Леси Украинки, 26
-        </address>
-        <ul class="lists">
-            <li>
-                <a href="mailto:info@devstudio.com" class="link contacts-footer">info@devstudio.com</a>
-            </li>
-            <li>
-                <a href="tel:+380961111111" class="link contacts-footer">+38 096 111 11 11</a>
-            </li>
-        </ul>
-    </div>
-
-</footer>
+    <footer class="footer">
+        <div class="footer-data">
+            <div class="footer-logo">
+                <a href="./index.html" class="link logo">Web <span class="logo2">Studio</span> </a>
+            </div>
+            <div class="footer-contacts">
+                <address class="address">
+                    г. Киев, пр-т Леси Украинки, 26
+                </address>
+                <ul class="lists">
+                    <li>
+                        <a href="mailto:info@devstudio.com" class="link contacts-footer">info@devstudio.com</a>
+                    </li>
+                    <li>
+                        <a href="tel:+380961111111" class="link contacts-footer">+38 096 111 11 11</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="come-us">
+            <b class="come-us-text">присоединяйтесь</b>
+            <ul class="lists footer-social">
+                <li class="social-icons-item">
+                    <a href="" class="link">
+                        <svg class="social-icons-link">
+                            <use href="../images/icons/symbol-defs.svg#icon-instagram-2"></use>
+                        </svg>
+                    </a>
+                </li> <li class="social-icons-item">
+                    <a href="" class="link">
+                        <svg class="social-icons-link">
+                            <use href="../images/icons/symbol-defs.svg#icon-twitter-1"></use>
+                        </svg>
+                    </a>
+                </li> <li class="social-icons-item">
+                    <a href="" class="link">
+                        <svg class="social-icons-link">
+                            <use href="../images/icons/symbol-defs.svg#icon-facebook-1"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="social-icons-item">
+                    <a href="" class="link">
+                        <svg class="social-icons-link">
+                            <use href="../images/icons/symbol-defs.svg#icon-linkedin-1"></use>
+                        </svg>
+                    </a>
+                </li>
+                
+            </ul>
+        </div>
+        
+    </footer>
 </body>
