--- a/index.html
+++ b/index.html
@@ -29,15 +29,16 @@
             </ul>
             <ul class="lists contacts">
                 <li>
-                    <a class="link mail item" href="mailto:info@devstudio.com"><svg width="16" height="12" viewBox="0 0 16 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M14.5 0H1.50001C0.672854 0 0 0.672853 0 1.50001V10.5C0 11.3271 0.672854 12 1.50001 12H14.5C15.3271 12 16 11.3271 16 10.5V1.50001C16 0.672853 15.3271 0 14.5 0ZM14.5 0.999994C14.5679 0.999994 14.6325 1.01409 14.6916 1.0387L8 6.83838L1.30833 1.0387C1.36742 1.01412 1.43204 0.999994 1.49998 0.999994H14.5ZM14.5 11H1.50001C1.22414 11 0.999996 10.7759 0.999996 10.5V2.09521L7.67236 7.87792C7.76661 7.95944 7.8833 7.99999 8 7.99999C8.1167 7.99999 8.23339 7.95948 8.32764 7.87792L15 2.09521V10.5C15 10.7759 14.7759 11 14.5 11Z" fill="#2196F3"/>
-                        </svg>
+                    <a class="link mail item" href="mailto:info@devstudio.com"><svg class="mail-icon"  >
+                        <use href="../images/icons/symbol-defs.svg#icon-mail-1"></use>
+                    </svg>
+                    </svg>
                         info@devstudio.com</a>
                 </li>
                 <li>
-                    <a class="link tel item" href="tel:+380961111111"><svg class="mobsvg" width="10" height="16" viewBox="0 0 10 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M8.5 0H1.5C0.672848 0 0 0.672848 0 1.5V14.5C0 15.3272 0.672848 16 1.5 16H8.5C9.32715 16 10 15.3272 10 14.5V1.5C10 0.672848 9.32715 0 8.5 0ZM1.5 1H8.5C8.77588 1 9 1.22412 9 1.5V12H1V1.5C1 1.22412 1.22412 1 1.5 1ZM8.5 15H1.5C1.22412 15 1 14.7759 1 14.5V13H9V14.5C9 14.7759 8.77588 15 8.5 15Z" fill="#757575"/>
-                        </svg> +38 096 111 11 11</a>
+                    <a class="link tel item" href="tel:+380961111111"><svg class="tel-icon"  >
+                        <use href="../images/icons/symbol-defs.svg#icon-phone-1"></use>
+                    </svg> +38 096 111 11 11</a>
                 </li>
             </ul>
         </nav>        
@@ -54,8 +55,9 @@
         </section>
         <section class="specs-section container">
             <ul class="lists">
-                <li class="item">
-                    <div class="radarsvg"><svg xmlns="http://www.w3.org/2000/svg" width="65.32" height="70"><path d="M29.859 22.098l-8.443-8.505.937-4.615c.242.094.499.144.758.146h.006a2.159 2.159 0 10-2.008-1.435l-4.96.605L8.058.161a.534.534 0 00-.377-.16.532.532 0 00-.373.155L5.795 1.66a.534.534 0 000 .754l.814.826a14.943 14.943 0 002.519 17.663.513.513 0 00.146.098c-.034.18-.051.364-.052.547v6.187h-6.4a2.67 2.67 0 00-2.667 2.667v1.067c0 .295.239.533.533.533h24.533a.533.533 0 00.533-.533v-1.067a2.67 2.67 0 00-2.667-2.667h-6.4v-2.742a15.09 15.09 0 003.049.32 14.854 14.854 0 007.04-1.783l.818.823a.534.534 0 00.377.16.532.532 0 00.373-.155l1.513-1.504a.534.534 0 000-.754zM22.366 6.233a1.066 1.066 0 11.752 1.822h-.003a1.067 1.067 0 01-.747-1.823h-.002zM21.11 9.738l-.598 2.946-1.175-1.182 1.774-1.763zm-.606-.902l-1.92 1.909-1.485-1.493 3.405-.415zM23.09 28.8a1.6 1.6 0 011.6 1.6v.533H1.223V30.4a1.6 1.6 0 011.6-1.6H23.09zm-7.467-2.133v1.067H10.29v-1.067h5.333zM10.29 25.6v-4.053c0-1.294 1.196-2.347 2.667-2.347s2.667 1.053 2.667 2.347V25.6h-5.333zm6.4-1.696v-2.357c0-1.882-1.675-3.413-3.733-3.413a3.8 3.8 0 00-3.281 1.786A13.87 13.87 0 017.397 4.033l18.602 18.708a13.818 13.818 0 01-9.309 1.163zm11.289-.684L6.922 2.039l.755-.752 7.935 7.98c.004 0 .006.007.01.01l13.115 13.191-.757.752z"/></svg></div>
+                <li class="specs-section-item">
+
+                    
                     <h3 class="specs-section-title">
                         Внимание к деталям
                     </h3>
@@ -63,14 +65,14 @@
                         Идейные соображения, а также начало повседневной работы по формированию позиции.
                     </p>
                 </li>
-                <li class="item">
+                <li class="specs-section-item">
                     <h3 class="specs-section-title"> Пунктуальность                   
                     </h3>
                     <p class="specs-section-text">
                         Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
                     </p>
                 </li>
-                <li class="item">
+                <li class="specs-section-item">
                     <h3 class="specs-section-title">
                         Планирование
                     </h3>
@@ -78,7 +80,7 @@
                         Равным образом консультация с широким активом в значительной степени обуславливает.
                     </p>
                 </li>
-                <li class="item">
+                <li class="specs-section-item">
                     <h3 class="specs-section-title">
                         Современные технологии
                     </h3>
@@ -210,7 +212,7 @@
                             </li>
                             <li class="social-icons-item">
                                 <a href="" class="link">
-                                    <svg class="social-icons-link"  >
+                                    <svg class="social-icons-link" >
                                         <use href="../images/icons/symbol-defs.svg#icon-instagram-2"></use>
                                     </svg>
                                 </a>
