--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 </head>
 <body class="body">
-    <header class="header container">
+    <header class="header ">
         <nav class="container nav">
         
             <a href="./index.html" class="link logo item">Web <span class="logo2">Studio</span> </a>
@@ -116,24 +116,27 @@
                 </li>
             </ul>       
         </section>
-        <section class=" container">
-                <h2 class="engagement-title">
-                    Чем мы занимаемся
-                </h2>
-            <ul class="engagement lists">
-                <li class="engagement-pic">
-                    <img src="./images/img1.jpg" alt="img1" width="370">
-                </li>
-                <li class="engagement-pic">
-                    <img src="./images/img2.jpg" alt="img2" width="370">
-                </li>
-                <li class="engagement-pic">
-                    <img src="./images/img3.jpg" alt="img3" width="370">
-                </li>  
-            </ul>
+        <section class="eng-section">
+            <div class="container">
+                    <h2 class="engagement-title">
+                        Чем мы занимаемся
+                    </h2>
+                <ul class="engagement lists">
+                    <li class="engagement-pic">
+                        <img src="./images/img1.jpg" alt="img1" width="370">
+                    </li>
+                    <li class="engagement-pic">
+                        <img src="./images/img2.jpg" alt="img2" width="370">
+                    </li>
+                    <li class="engagement-pic">
+                        <img src="./images/img3.jpg" alt="img3" width="370">
+                    </li>  
+                </ul>
+            </div>
         </section>
-        <section class="team ">
-            <h2 class="title team">
+        <section class="team">
+        <div class="container">
+            <h2 class="title-team">
                 Наша команда
             </h2>
             <ul class="lists team">
@@ -301,64 +304,66 @@
                         </ul>          
                 </li>
             </ul>
+        </div>
         </section>
-        <section class="section customers container">
-            <h2 class="title customers">
-                Постоянные клиенты
-            </h2>
+        <section class="section customers customers-section">
+                <div class="container">
+                    <h2 class="title customers">
+                        Постоянные клиенты
+                    </h2>
 
-            <ul class="lists customers">
-                <li class="item-customers">
-                    <a href="" class="link">
-                        <svg class="icon-clients" width="44px" height="49px">
-                            <use href="../images/icons/symbol-defs.svg#icon-logo-1"></use>
-                        </svg>
-                    </a>
-                </li>
-                <li class="item-customers">
-                    <a href="" class="link">
-                        <svg class="icon-clients" width="44px" height="49px">
-                            <use href="../images/icons/symbol-defs.svg#icon-logo-2"></use>
-                        </svg>
-                    </a>
-                </li>
-                <li class="item-customers">
-                    <a href="" class="link">
-                        <svg class="icon-clients" width="44px" height="49px">
-                            <use href="../images/icons/symbol-defs.svg#icon-logo-3"></use>
-                        </svg>
-                    </a>
-                </li>
-                <li class="item-customers">
-                    <a href="" class="link">
-                        <svg class="icon-clients" width="44px" height="49px">
-                            <use href="../images/icons/symbol-defs.svg#icon-logo-4"></use>
-                        </svg>
-                    </a>
-                </li>
-                <li class="item-customers">
-                    <a href="" class="link">
-                        <svg class="icon-clients" width="44px" height="49px">
-                            <use href="../images/icons/symbol-defs.svg#icon-logo-5"></use>
-                        </svg>
-                    </a>
-                </li>
-                <li class="item-customers">
-                    <a href="" class="link">
-                        <svg class="icon-clients" width="44px" height="49px">
-                            <use href="../images/icons/symbol-defs.svg#icon-logo-6"></use>
-                        </svg>
-                    </a>
-                </li>
-            </ul>
-
+                    <ul class="lists customers">
+                        <li class="item-customers">
+                            <a href="" class="link">
+                                <svg class="icon-clients" width="44px" height="49px">
+                                    <use href="../images/icons/symbol-defs.svg#icon-logo-1"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="item-customers">
+                            <a href="" class="link">
+                                <svg class="icon-clients" width="44px" height="49px">
+                                    <use href="../images/icons/symbol-defs.svg#icon-logo-2"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="item-customers">
+                            <a href="" class="link">
+                                <svg class="icon-clients" width="44px" height="49px">
+                                    <use href="../images/icons/symbol-defs.svg#icon-logo-3"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="item-customers">
+                            <a href="" class="link">
+                                <svg class="icon-clients" width="44px" height="49px">
+                                    <use href="../images/icons/symbol-defs.svg#icon-logo-4"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="item-customers">
+                            <a href="" class="link">
+                                <svg class="icon-clients" width="44px" height="49px">
+                                    <use href="../images/icons/symbol-defs.svg#icon-logo-5"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="item-customers">
+                            <a href="" class="link">
+                                <svg class="icon-clients" width="44px" height="49px">
+                                    <use href="../images/icons/symbol-defs.svg#icon-logo-6"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
 
         </section>
     </main>
-    <footer class="footer container">
-        <div class="footer-data ">
+    <footer class="footer">
+        <div class="container footer-data ">
             <div class="footer-logo">
-                <a href="./index.html" class="link logo">Web <span class="logo2">Studio</span> </a>
+                <a href="./index.html" class="link logo">Web <span class="logo2f">Studio</span> </a>
             </div>
             <div class="footer-contacts">
                 <address class="address">
