--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <li>
                     <a class="link contact item" href="mailto:info@devstudio.com">
                         <svg class="icon-contacts" width="16px" height="12px" >
-                            <use href="../images/icons/symbol-defs.svg#icon-mail-1"></use>
+                            <use href="./images/icons/symbol-defs.svg#icon-mail-1"></use>
                         </svg>
                         info@devstudio.com
                     </a>
@@ -39,7 +39,7 @@
                 <li>
                     <a class="link contact item" href="tel:+380961111111">
                         <svg class="icon-contacts" width="16px" height="12px" >
-                            <use href="../images/icons/symbol-defs.svg#icon-phone-1"></use>
+                            <use href="./images/icons/symbol-defs.svg#icon-phone-1"></use>
                         </svg>
                         +38 096 111 11 11
                     </a>
@@ -153,28 +153,28 @@
                         <li class="social-icons-item">
                             <a href="" class="link">
                                 <svg class="social-icons-link"  >
-                                    <use href="../images/icons/symbol-defs.svg#icon-twitter-1"></use>
+                                    <use href="./images/icons/symbol-defs.svg#icon-twitter-1"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-icons-item">
                             <a href="" class="link">
                                 <svg class="social-icons-link"  >
-                                    <use href="../images/icons/symbol-defs.svg#icon-instagram-2"></use>
+                                    <use href="./images/icons/symbol-defs.svg#icon-instagram-2"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-icons-item">
                             <a href="" class="link">
                                 <svg class="social-icons-link"  >
-                                    <use href="../images/icons/symbol-defs.svg#icon-facebook-1"></use>
+                                    <use href="./images/icons/symbol-defs.svg#icon-facebook-1"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-icons-item">
                             <a href="" class="link">
                                 <svg class="social-icons-link"  >
-                                    <use href="../images/icons/symbol-defs.svg#icon-linkedin-1"></use>
+                                    <use href="./images/icons/symbol-defs.svg#icon-linkedin-1"></use>
                                 </svg>
                             </a>
                         </li>
@@ -195,28 +195,28 @@
                         <li class="social-icons-item">
                             <a href="" class="link">
                                 <svg class="social-icons-link"  >
-                                    <use href="../images/icons/symbol-defs.svg#icon-twitter-1"></use>
+                                    <use href="./images/icons/symbol-defs.svg#icon-twitter-1"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-icons-item">
                             <a href="" class="link">
                                 <svg class="social-icons-link"  >
-                                    <use href="../images/icons/symbol-defs.svg#icon-instagram-2"></use>
+                                    <use href="./images/icons/symbol-defs.svg#icon-instagram-2"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-icons-item">
                             <a href="" class="link">
                                 <svg class="social-icons-link"  >
-                                    <use href="../images/icons/symbol-defs.svg#icon-facebook-1"></use>
+                                    <use href="./images/icons/symbol-defs.svg#icon-facebook-1"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-icons-item">
                             <a href="" class="link">
                                 <svg class="social-icons-link"  >
-                                    <use href="../images/icons/symbol-defs.svg#icon-linkedin-1"></use>
+                                    <use href="./images/icons/symbol-defs.svg#icon-linkedin-1"></use>
                                 </svg>
                             </a>
                         </li>
@@ -235,28 +235,28 @@
                             <li class="social-icons-item">
                                 <a href="" class="link">
                                     <svg class="social-icons-link"  >
-                                        <use href="../images/icons/symbol-defs.svg#icon-twitter-1"></use>
+                                        <use href="./images/icons/symbol-defs.svg#icon-twitter-1"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-icons-item">
                                 <a href="" class="link">
                                     <svg class="social-icons-link" >
-                                        <use href="../images/icons/symbol-defs.svg#icon-instagram-2"></use>
+                                        <use href="./images/icons/symbol-defs.svg#icon-instagram-2"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-icons-item">
                                 <a href="" class="link">
                                     <svg class="social-icons-link"  >
-                                        <use href="../images/icons/symbol-defs.svg#icon-facebook-1"></use>
+                                        <use href="./images/icons/symbol-defs.svg#icon-facebook-1"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-icons-item">
                                 <a href="" class="link">
                                     <svg class="social-icons-link"  >
-                                        <use href="../images/icons/symbol-defs.svg#icon-linkedin-1"></use>
+                                        <use href="./images/icons/symbol-defs.svg#icon-linkedin-1"></use>
                                     </svg>
                                 </a>
                             </li>
@@ -275,28 +275,28 @@
                             <li class="social-icons-item">
                                 <a href="" class="link">
                                     <svg class="social-icons-link"  >
-                                        <use href="../images/icons/symbol-defs.svg#icon-twitter-1"></use>
+                                        <use href="./images/icons/symbol-defs.svg#icon-twitter-1"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-icons-item">
                                 <a href="" class="link">
                                     <svg class="social-icons-link"  >
-                                        <use href="../images/icons/symbol-defs.svg#icon-instagram-2"></use>
+                                        <use href="./images/icons/symbol-defs.svg#icon-instagram-2"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-icons-item">
                                 <a href="" class="link">
                                     <svg class="social-icons-link"  >
-                                        <use href="../images/icons/symbol-defs.svg#icon-facebook-1"></use>
+                                        <use href="./images/icons/symbol-defs.svg#icon-facebook-1"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-icons-item">
                                 <a href="" class="link">
                                     <svg class="social-icons-link"  >
-                                        <use href="../images/icons/symbol-defs.svg#icon-linkedin-1"></use>
+                                        <use href="./images/icons/symbol-defs.svg#icon-linkedin-1"></use>
                                     </svg>
                                 </a>
                             </li>
@@ -316,42 +316,42 @@
                         <li class="item-customers">
                             <a href="" class="link">
                                 <svg class="icon-clients" width="44px" height="49px">
-                                    <use href="../images/icons/symbol-defs.svg#icon-logo-1"></use>
+                                    <use href="./images/icons/symbol-defs.svg#icon-logo-1"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="item-customers">
                             <a href="" class="link">
                                 <svg class="icon-clients" width="44px" height="49px">
-                                    <use href="../images/icons/symbol-defs.svg#icon-logo-2"></use>
+                                    <use href="./images/icons/symbol-defs.svg#icon-logo-2"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="item-customers">
                             <a href="" class="link">
                                 <svg class="icon-clients" width="44px" height="49px">
-                                    <use href="../images/icons/symbol-defs.svg#icon-logo-3"></use>
+                                    <use href="./images/icons/symbol-defs.svg#icon-logo-3"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="item-customers">
                             <a href="" class="link">
                                 <svg class="icon-clients" width="44px" height="49px">
-                                    <use href="../images/icons/symbol-defs.svg#icon-logo-4"></use>
+                                    <use href="./images/icons/symbol-defs.svg#icon-logo-4"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="item-customers">
                             <a href="" class="link">
                                 <svg class="icon-clients" width="44px" height="49px">
-                                    <use href="../images/icons/symbol-defs.svg#icon-logo-5"></use>
+                                    <use href="./images/icons/symbol-defs.svg#icon-logo-5"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="item-customers">
                             <a href="" class="link">
                                 <svg class="icon-clients" width="44px" height="49px">
-                                    <use href="../images/icons/symbol-defs.svg#icon-logo-6"></use>
+                                    <use href="./images/icons/symbol-defs.svg#icon-logo-6"></use>
                                 </svg>
                             </a>
                         </li>
@@ -360,8 +360,8 @@
 
         </section>
     </main>
-    <footer class="footer">
-        <div class="container footer-data ">
+    <footer class="footer container">
+        <div class=" footer-data ">
             <div class="footer-logo">
                 <a href="./index.html" class="link logo">Web <span class="logo2f">Studio</span> </a>
             </div>
@@ -385,26 +385,26 @@
                 <li class="social-icons-item">
                     <a href="" class="link">
                         <svg class="social-icons-link">
-                            <use href="../images/icons/symbol-defs.svg#icon-instagram-2"></use>
+                            <use href="./images/icons/symbol-defs.svg#icon-instagram-2"></use>
                         </svg>
                     </a>
                 </li> <li class="social-icons-item">
                     <a href="" class="link">
                         <svg class="social-icons-link">
-                            <use href="../images/icons/symbol-defs.svg#icon-twitter-1"></use>
+                            <use href="./images/icons/symbol-defs.svg#icon-twitter-1"></use>
                         </svg>
                     </a>
                 </li> <li class="social-icons-item">
                     <a href="" class="link">
                         <svg class="social-icons-link">
-                            <use href="../images/icons/symbol-defs.svg#icon-facebook-1"></use>
+                            <use href="./images/icons/symbol-defs.svg#icon-facebook-1"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="social-icons-item">
                     <a href="" class="link">
                         <svg class="social-icons-link">
-                            <use href="../images/icons/symbol-defs.svg#icon-linkedin-1"></use>
+                            <use href="./images/icons/symbol-defs.svg#icon-linkedin-1"></use>
                         </svg>
                     </a>
                 </li>
